Bug #33037007: PRELIMINARY FIXES FOR WL #14488 [used_key_parts dup, noclose]

QUICK_SELECT_DESC has two different copies of the used_key_parts member;
one in itself, and one in the QUICK_SELECT_I base class. These are not
properly in sync, and since get_used_fields() is defined in QUICK_SELECT,
it uses the base class, returning the wrong bitmap.

This extra member was seemingly introduced by error in Bug #37830 (ORDER BY
ASC/DESC - no difference). Clang warned about it, but the warning was
silenced in Bug #28614646 (FIX -WSHADOW-FIELD WARNINGS) by renaming
the wrong one (from used_key_parts to m_used_key_parts) instead of
actually removing it. Do so now.

Change-Id: I3c2bc864544bb88b537f48ef8c5de8804f446d6e